# chat-server

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/backend/: .dockerignore  .env.default  Dockerfile  Dockerfile.dev  README.md  openapi.json  pyproject.toml  requirements.txt
apps/backend/app/: main.py
apps/backend/app/core/: config.py  logging.py
apps/backend/app/features/chat/: router.py  schemas.py
apps/frontend/: .dockerignore  Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
apps/frontend/src/: App.test.tsx  App.tsx
apps/frontend/src/client/: sdk.gen.ts  types.gen.ts
apps/frontend/src/features/chat/: hooks.ts  schemas.ts  store.ts
apps/frontend/src/features/chat/constants/: messages.ts
apps/frontend/src/features/chat/pages/: ChatPage.tsx
apps/frontend/src/features/chat/ui/: InputBox.tsx  MessageBubble.tsx
apps/frontend/src/styles/: tailwind.css
scripts/: get-client.js
